# Gabolls

./: .gitignore  README.md  lint.sh  pyproject.toml  score.py  test.py
app/: db.py
app/game/: cards.py  consts.py  create.py  game_state.py  main.py  questions.py  scenario.py  scoring.py  spells.py
app/schemas/: action.py  card.py  card_view.py  decisions.py  deck.py  discard.py  game_action.py  game_resume.py  game_state.py  hand.py  lobby.py  phase.py  player.py  player_action.py  player_card.py  profile.py  round.py  round_end.py  round_resume.py  rules.py  seed.py  spell.py  spell_response.py
db/: docker-compose.yml
gabolls/: consts.py  main.py
gabolls/api/: fast.py  round.py
gabolls/game/: actions.py  cards.py  decisions.py  discard.py  game.py  game_state.py  round.py  scenario.py  scoring.py  seed.py  spells.py
gabolls/models/: action.py  card.py  card_view.py  config.py  decisions.py  deck.py  discard.py  errors.py  game.py  game_action.py  game_resume.py  game_state.py  hand.py  lobby.py  phase.py  player.py  player_action.py  player_card.py  profile.py  pydantic_config.py  rank.py  round.py  round_end.py  round_over.py  round_resume.py  rules.py  score.py  seed.py  spell.py  spell_response.py  suit.py
gabolls_api/: deck.ts  docker-compose.yml  give_scores.py  index.ts  main.py  package-lock.json  package.json  pyproject.toml
gabolls_api/data_objects/: game.py  player.py  scoring.py  user.py
gabolls_api/gabolls_api/auth/: password_validation.py
gabolls_api/gabolls_api/db/: __init__.py  session.py
gabolls_api/gabolls_api/object_definitions/: player.py  score.py  simulation.py  user.py  user_creation.py
gabolls_api/gabolls_api/scoring/: gabo.py  penalty.py  points.py
gabolls_api/models/: deck.ts  player.ts
gabolls_api/scoring/: calculateScore.ts  gaboScoring.ts  penaltyScoring.ts  pointScoring.ts  score.ts
gabolls_api__/: give_scores.py  pyproject.toml
gabolls_api__/data_objects/: game.py
gabolls_front/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1711483729153-647048e3b27c2.mjs
gabolls_front/src/: App.css  App.tsx  routes.tsx
gabolls_game/: consts.py  main.py
gabolls_game/api/: fast.py  round.py
gabolls_game/game/: cards.py  game.py  game_state.py  scenario.py  scoring.py  spells.py
game/: consts.py  main.py
(+147 files in other folders)
