[tool.poetry]
name = "gabolls"
version = "0.1.0"
description = ""
authors = ["hugo-andriamaromanana <hugo.andriamaromanana@laplateforme.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
loguru = "^0.7.3"
black = "^24.10.0"
ruff = "^0.8.3"
mypy = "^1.13.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
