[tool.poetry]
name = "gabolls"
version = "0.1.0"
description = ""
authors = ["hugo-andriamaromanana <hugo.andriamaromanana@laplateforme.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"
loguru = "^0.7.2"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
psycopg = "^3.1.18"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
icecream = "*"

[tool.poetry.group.ci.dependencies]
black = { version = "*", allow-prereleases = true }
isort = "*"
ruff = "*"
mypy = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.isort]
profile = "black"

[tool.ruff]
exclude = ["docs", "archive"]
lint.select = ["E", "F", "W", "C90", "I", "D", "UP", "PD", "PL"]
lint.ignore = ["D104", "D107", "D205", "D415"]
lint.pydocstyle.convention = "google"
lint.pylint.max-args = 8
lint.mccabe.max-complexity = 5

[tool.mypy]
files = ["gabolls_api"]
strict = true
namespace_packages = true
explicit_package_bases = true
disallow_untyped_calls = false


[[tool.mypy.overrides]]
module = [
    "icecream.*",
]
ignore_missing_imports = true
