[tool.poetry]
name = "gabolls"
version = "0.1.0"
description = ""
authors = ["hugo-andriamaromanana <hugo.andriamaromanana@laplateforme.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"
loguru = "^0.7.2"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
psycopg = "^3.1.18"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
